# polymarket_ubuntu_v1.0

./: CMakeLists.txt  config.json  crypto_trader.py  setup.sh  setup_for_macos.sh  setup_for_ubuntu.sh  start_chrome.sh
src/platform/: system.cpp
src/utils/: filesystem.cpp
